Continuing to fix alignment on page.

--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -184,6 +184,7 @@ textarea {
 
 .save {
   background-color: green;
+  margin: 20px 0px 20px 0px;
 }
 
 .delete {
@@ -213,7 +214,7 @@ textarea {
   color: #222;
   white-space: nowrap;
   font-weight: normal;
-  line-height: 1.5em;
+  // line-height: 1.5em;
 }
 
 .rw-words{
